Fix duplicate label in D2.2

--- a/D2.2/D2.2_application_improvements.tex
+++ b/D2.2/D2.2_application_improvements.tex
@@ -275,7 +275,7 @@ Right now a first basic version can be distributed for MacOS and Linux systems o
   \includegraphics[width=\textwidth]{dualistic-mwe.png}
 
   \caption{A Minimal Working Example (MWE)  graph in the client app.}
-  \label{fig:dualistic-architecture}
+  \label{fig:dualistic-mwe}
 \end{figure}
 
 \begin{figure}
