--- a/D3.2/D3.2_codesign.tex
+++ b/D3.2/D3.2_codesign.tex
@@ -481,9 +481,11 @@ In the remaining period of this work package, we plan to adopt this strategy to 
 \begin{center}
     \begin{table}[h!]
     \small
-    \caption{GPUs used for evaluation}
-    \renewcommand{\arraystretch}{1.25}
+    \caption{GPUs used for evaluation}\medskip
     \label{tab:example_table}
+
+    \centering
+    \renewcommand{\arraystretch}{1.25}
     \begin{tabular}{|l|l|l|c|}
     \hline
     \textbf{Column 1} & \textbf{Ampere} & \textbf{Hopper} & \textbf{Ponte Vecchio} \\
