--- a/D3.2/refs.bib
+++ b/D3.2/refs.bib
@@ -1,6 +1,6 @@
 @article{Cielo25,
   author    = {Cielo, Salvatore and Pöppl, Alexander and Pribec, Ivan},
-  title     = {SYCL for Energy-Efficient Numerical Astrophysics: the case of DPEcho},
+  title     = {{SYCL} for Energy-Efficient Numerical Astrophysics: the case of {DPE}cho},
   journal   = {arXiv preprint arXiv:2508.14117},
   year      = {2025}
 }
@@ -78,23 +78,23 @@
   volume = {34},
   number = {5},
   pages = {562--586},
-  author = {Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Velelin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia {\'{S}}wirydowicz and Jed Brown}, 
+  author = {Paul Fischer and Misun Min and Thilina Rathnayake and Som Dutta and Tzanio Kolev and Veselin Dobrev and Jean-Sylvain Camier and Martin Kronbichler and Tim Warburton and Kasia {\'{S}}wirydowicz and Jed Brown},
   title = {Scalability of high-performance {PDE} solvers},
   journal = {The International Journal of High Performance Computing Applications}
 }
 
 @book{Deville02,
   title={High-order methods for incompressible fluid flow},
-  author={Deville, M. O. and Fischer, P. F. and Mund, E. H.},
+  author={Deville, Michel O. and Fischer, Paul F. and Mund, Ernest H.},
   volume={9}, 
   year={2002},
   publisher={Cambridge University Press}
 }
 
 @article{Arndt21,
-  author = {D. Arndt and W. Bangerth and D. Davydov and T.
-    Heister and L. Heltai and M. Kronbichler and M. Maier and 
-      J.-P. Pelteret and B. Turcksin and D. Wells},
+  author = {Daniel Arndt and Wolfgang Bangerth and Denis Davydov and Timo
+    Heister and Luca Heltai and Martin Kronbichler and Matthias Maier and
+      Jean-Paul Pelteret and Bruno Turcksin and David Wells},
   title = {The deal.{{II}} finite element library: design, features, and insights},
   doi = {10.1016/j.camwa.2020.02.022},
   journal = {Comput Math with Appl},
@@ -111,7 +111,7 @@ year = 2023
 }
 
 @inproceedings{Laukemann2024,
-  title={Microarchitectural comparison and in-core modeling of state-of-the-art CPUs: Grace, Sapphire Rapids, and Genoa},
+  title={Microarchitectural comparison and in-core modeling of state-of-the-art {CPUs}: {G}race, {S}apphire {R}apids, and {G}enoa},
   author={Laukemann, Jan and Hager, Georg and Wellein, Gerhard},
   booktitle={SC24-W: Workshops of the International Conference for High Performance Computing, Networking, Storage and Analysis},
   pages={1405--1412},
@@ -121,7 +121,7 @@ year = 2023
 
 @misc{Hager2021,
   author       = {Georg Hager},
-  title        = {Write-allocate evasion has finally arrived at Intel -- or has it?},
+  title        = {Write-allocate evasion has finally arrived at {I}ntel -- or has it?},
   year         = {2021},
   month        = {October},
   day          = {27},
